ks8/go-vr-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-dbless.yml -o ./ks8
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: go-vr-auth
  name: go-vr-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: go-vr-auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-dbless.yml -o ./ks8
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: go-vr-auth
    spec:
      containers:
        - image: docker69/go-vr-auth
          name: go-vr-auth
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
