ks8/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-dbless.yml -o ./ks8
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "8001"
      port: 8001
      targetPort: 8001
    - name: "8002"
      port: 8002
      targetPort: 8002
    - name: "8444"
      port: 8444
      targetPort: 8444
    - name: "8445"
      port: 8445
      targetPort: 8445
  selector:
    io.kompose.service: kong
status:
  loadBalancer: {}
